# nodeJS-ChanhXe-Managenment/src/routers/khachHangRouter.js
@@ -7,6 +7,8 @@ const {
   createCustomer,
   updateCustomer,
   deleteCustomer,
+  loginCustomer,
+  logoutCustomer,
 } = require("../controllers/khachHangController");
 const { checkUserJWT } = require("../middleware/JWTaction");
 router.get("/customers", checkUserJWT, getAllCustomers);
@@ -14,5 +16,7 @@ router.get("/customers/:id", checkUserJWT, getCustomerById);
 router.post("/customers", checkUserJWT, createCustomer);
 router.put("/customers/:id", checkUserJWT, updateCustomer);
 router.delete("/customers/:id", checkUserJWT, deleteCustomer);
+router.post("/login-customer", loginCustomer);
+router.post("/logout-customer", logoutCustomer);
 
 module.exports = router;
